--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chrome-extension-boilerplate-react",
+  "name": "tellit",
   "version": "5.0.4",
-  "description": "A chrome extension boilerplate built with React 18, Webpack 5, and Webpack Dev Server 4",
+  "description": "Supercharged ChatGPT prompt extension for Chrome",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -13,8 +13,18 @@
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.11",
+    "@heroicons/react": "^2.0.15",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "algoliasearch": "^4.14.3",
+    "concurrently": "^7.6.0",
+    "moment": "^2.29.4",
+    "mv3-hot-reload": "^0.2.7",
+    "postcss-loader": "^7.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-instantsearch-dom": "^6.39.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -25,6 +35,7 @@
     "@types/chrome": "^0.0.202",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "autoprefixer": "^10.4.13",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
     "babel-preset-react-app": "^10.0.1",
@@ -42,6 +53,7 @@
     "fs-extra": "^11.1.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "react-refresh": "^0.14.0",
     "react-refresh-typescript": "^2.0.7",
@@ -49,13 +61,16 @@
     "sass-loader": "^13.2.0",
     "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.2.6",
     "terser-webpack-plugin": "^5.3.6",
     "ts-loader": "^9.4.2",
     "type-fest": "^3.5.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
+    "webpack-dev-middleware": "^6.0.1",
     "webpack-dev-server": "^4.11.1",
+    "webpack-hot-middleware": "^2.25.3",
     "zip-webpack-plugin": "^4.0.1"
   }
 }
